fixed overflow on landing desktop

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -226,6 +226,10 @@ nav {
         padding-top: 10px !important
     }
 
+    .main-landing {
+        overflow-y: auto !important;
+    }
+
 .mobile-field {
     margin-top: 10px!important;
 }
